--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
 
     "engines": {
               "node": "14.15.3"
-      }
- 
+      },
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
   
 }
