--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-jwt": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.12",
     "mongoose-encryption": "^2.0.3",
@@ -23,7 +22,8 @@
     "multer": "^1.4.2"
   },
   "engines": {
-    "node": "14.15.3"
+    "node": "14.15.3",
+    "npm":"6.14.9"
   },
   "devDependencies": {}
 }
