--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "mongoose": "^5.11.12",
     "mongoose-encryption": "^2.0.3",
     "mongoose-paginate-v2": "^1.3.13",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "path": "^0.12.7"
   },
   "engines": {
     "node": "14.15.3",
-    "npm":"6.14.9"
+    "npm": "6.14.9"
   },
   "devDependencies": {}
 }
