--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "mongoose": "^5.11.12",
     "mongoose-encryption": "^2.0.3",
     "mongoose-paginate-v2": "^1.3.13",
-    "multer": "^1.4.2",
-    "path": "^0.12.7"
+    "multer": "^1.4.2"
   },
   "engines": {
     "node": "14.15.3",
